User loggin and create product path created

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,14 +9,16 @@
   "author": "M.Č.",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.6",
-    "cross-env": "^7.0.2"
+    "cross-env": "^7.0.2",
+    "nodemon": "^2.0.6"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "dotenv": "^8.2.0",
-    "mongoose": "^5.10.15",
+    "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
-    "mongoose-unique-validator": "^2.0.3"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.11.8",
+    "mongoose-unique-validator": "^2.0.3",
+    "jsonwebtoken": "^8.5.1"
   }
 }
