--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,15 +6,18 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.0",
+    "formik": "^2.2.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-modal": "^3.12.1",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-select": "^3.1.1",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4",
-    "axios": "^0.21.0"
+    "yup": "^0.32.8"
   },
   "scripts": {
     "dev": "nodemon index.js",
